content/posts/self-hosted-oidc/manifests/ldap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldap
  namespace: dex
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: ldap
  template:
    metadata:
      labels:
        app: ldap
    spec:
# FIXME: ports, probes, sec context, mounts
      automountServiceAccountToken: false
      containers:
        - name: ldap
          image: glauth/glauth:v2.4.0
          resources:
            limits:
              cpu: 10m
              memory: 12Mi
            requests:
              cpu: 5m
              memory: 12Mi
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
               - NET_BIND #FIXME: nopre 
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1001 #FIXME: nopre
          volumeMounts:
            - name: ldap
              mountPath: /app/config/config.cfg
              subPath: ldap.cfg
      volumes:
        - name: ldap
          configMap:
            name: ldap
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  terminationGracePeriodSeconds: 30
  minReadySeconds: 0
---
apiVersion: v1
kind: Service
metadata:
  name: ldap
  namespace: dex
spec:
  type: ClusterIP
  selector:
    app: ldap
  internalTrafficPolicy: Cluster
  ports:
    - port: 3893
      targetPort: 3893
      protocol: 'TCP'
